[gd_scene load_steps=13 format=3 uid="uid://b8vs5i2cdotn7"]

[ext_resource type="Script" uid="uid://dlwqdg3wounj1" path="res://Scripts/Ball.gd" id="1_ball"]
[ext_resource type="Script" uid="uid://ckah43um0njug" path="res://Scripts/BarrierGenerator.gd" id="1_barrier_gen"]
[ext_resource type="Script" uid="uid://r4bq7udlia37" path="res://Scripts/BallCamera.gd" id="1_camera"]
[ext_resource type="Script" uid="uid://qjckclpb6joj" path="res://Scripts/GameManager.gd" id="1_game_manager"]
[ext_resource type="Script" uid="uid://jus1fh2bwsni" path="res://Scripts/WallCollider.gd" id="1_wall_collider"]
[ext_resource type="Texture2D" uid="uid://dkpq0u0ub247n" path="res://Textures/Ball.png" id="3_21xkr"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_21xkr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_left_wall"]
size = Vector2(20, 1080)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_6bp64"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_right_wall"]
size = Vector2(20, 1080)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_21xkr"]
size = Vector2(897, 3)

[sub_resource type="CircleShape2D" id="CircleShape2D_ball"]
radius = 60.0

[node name="PlayScene" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("1_camera")

[node name="LeftWall" type="StaticBody2D" parent="Camera2D"]
position = Vector2(-414, 0)
physics_material_override = SubResource("PhysicsMaterial_21xkr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/LeftWall"]
shape = SubResource("RectangleShape2D_left_wall")

[node name="RightWall" type="StaticBody2D" parent="Camera2D"]
position = Vector2(416, 0)
physics_material_override = SubResource("PhysicsMaterial_6bp64")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/RightWall"]
shape = SubResource("RectangleShape2D_right_wall")

[node name="Ceiling" type="StaticBody2D" parent="Camera2D"]
position = Vector2(0, -600)
scale = Vector2(1, 10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/Ceiling"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_21xkr")

[node name="Ball" type="RigidBody2D" parent="."]
position = Vector2(0, -366)
mass = 0.3
gravity_scale = 5.0
continuous_cd = 2
contact_monitor = true
max_contacts_reported = 10
script = ExtResource("1_ball")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("CircleShape2D_ball")

[node name="Sprite2D" type="Sprite2D" parent="Ball/CollisionShape2D"]
position = Vector2(-1, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_21xkr")

[node name="BarrierGenerator" type="Node2D" parent="."]
position = Vector2(-14, 0)
script = ExtResource("1_barrier_gen")
gap_width_scale = 3.0

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_game_manager")

[node name="WallCollider" type="Node2D" parent="."]
script = ExtResource("1_wall_collider")

[node name="Parallax2D" type="Parallax2D" parent="."]
scroll_scale = Vector2(0, 1)
